fix adjust layout of main content for better alignment

--- a/style.css
+++ b/style.css
@@ -11,13 +11,21 @@ body {
 section {
   margin-bottom: 10px;
 }
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 main {
-  position: absolute;
-  top: 100px;
-  left: 320px;
+  display: inline-block;
+  width: 75vw;
+  position: relative;
   line-height: 1.4;
-  margin-left: 20px;
   font-size: 18px;
+  vertical-align: top;
+  margin-bottom: 0;
+  margin-left: 20px;
 }
 
 main h2 {
@@ -30,6 +38,7 @@ main section {
 }
 
 aside {
+  display: inline-block;
   background-color: rgba(52, 52, 128, 0.36);
   width: 300px;
   font-size: 14px;
@@ -126,10 +135,7 @@ header img {
 .skills-section ul {
   font-size: 16px;
 }
-pre {
-  height: auto;
-  margin-bottom: 0;
-}
+
 .javascript-code {
   margin-left: 0;
   font-size: 16px;
@@ -138,7 +144,7 @@ pre {
   margin-bottom: 5px;
 }
 .code-example {
-  line-height: 1.2;
+  line-height: 1.3;
 }
 h1 {
   text-align: center;
